ingress/ingress.yml
# https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.0/deploy/static/provider/aws/deploy.yaml
# Deploy Nginx Ingress Controller Using above deploy.yaml file in url

# Create Ingresses for the Ingress Controller

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: red-ingress
  labels:
    name: red-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
# ingressClassName: nginx-example
  rules:
  - host: red.pavank8s.ml
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: red
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ingress
  labels:
    name: green-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
# ingressClassName: nginx-example
  rules:
  - host: green.pavank8s.ml
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: green
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ingress
  labels:
    name: blue-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
# ingressClassName: nginx-example
  rules:
  - host: blue.pavank8s.ml
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: blue
            port: 
              number: 80
